@@ -5,6 +5,11 @@ timeout: 300
     true:
         - "apt-get -y --purge remove snapd vlc plasma-discover muon transmission-qt quassel 2048-qt featherpad noblenote kcalc qps zsync partitionmanager qapt-deb-installer picom qlipper qtpass libreoffice*"
         - "apt-get -y autoremove"
+"packages.restrictedExtras":
+    true:
+        - "sed -i 's/Enabled: no/Enabled: yes/g' /etc/apt/sources.list.d/ubuntu_nonfree.sources"
+        - "apt-get update"
+        - "apt-get -y install ubuntu-restricted-extras"
 "packages.updateNow":
     true: "apt-get -y full-upgrade"
 "packages.virt-manager":
