@@ -3,6 +3,9 @@ calamares-settings-ubuntu (1:24.04.1) UNRELEASED; urgency=medium
   * Fix Vcs-*.
   * Add a Package Select module, allowing for fine-tuned customization of the
     installed system.
+  * Migrate to deb822 sources, removing the sources.list file pre-populated by
+    livecd-rootfs. Main and Universe deb sources are enabled by default,
+    Restricted and Multiverse are opt-in via the installer checkbox.
 
  -- Simon Quigley <tsimonq2@ubuntu.com>  Sun, 08 Oct 2023 22:02:44 -0500
 
